Thu Sep 23 07:55:57 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * tests/IDL3_to_XMI/XMI_For_Array/test.idl:
        * tests/IDL3_to_XMI/XMI_For_Sequence/test.idl:
          Fixed errors related to anonymous types.

Thu Sep 23 07:49:32 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * tests/IDL3_to_XMI/Bug_3607_Regression/test.idl:
        * tests/IDL3_to_XMI/IDL2XMI_Test/run_test.pl:
          Fixed errors related to anonymous types.

Thu Sep 23 06:47:01 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ccm/CCM_stub.mpc:
        * ccm/CCM_svnt.mpc:
          Fixed export macros

Wed Sep 22 14:50:49 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ccm:
        * ccm/CCM_svnt.mpc:
        * ccm/Session/CCM_SessionSynchronization.idl:
        * ccm/CCM_SessionSynchronization.idl:
          Moved another file to Session

Wed Sep 22 13:48:37 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * MPC/config/ccm_session_stub.mpb:
        * MPC/config/ciao_servant.mpb:
        * ccm/CCM_lem_stub.mpc:
        * ccm/Extension/CCM_extension.mpc:
        * ccm/Session/CCM_SessionComponent.idl:
        * ccm/Session/CCM_SessionContext.idl:
        * ciao/Servants/Connector_Servant_Impl_Base.h:
        * ciao/Servants/Servants.mpc:
        * ccm/CCM_SessionComponent.idl:
        * ccm/CCM_SessionContext.idl:
        * ccm/Extension/CCM_extension_stub.mpc:
          More work in seperating the Session container from the CCM core

Wed Sep 22 12:53:36 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ccm/CCM_svnt.mpc:
        * ccm/Entity/CCM_ComponentId.idl:
        * ccm/Entity/CCM_Entity2Context.idl:
        * ccm/Entity/CCM_EntityComponent.idl:
        * ccm/Entity/CCM_EntityContext.idl:
        * ccm/Entity/CCM_StateIdFactory.idl:
        * ccm/Entity/CCM_entity_svnt.mpc:
        * ccm/Extended:
        * ccm/Extended/CCM_CCM2Context.idl:
        * ccm/Extended/CCM_HomeRegistration.idl: