@@ -20,5 +20,5 @@ struct TestTopic {
   };
 
   typedef sequence<TestTopic> TestTopicSeq;
- 
+
 #endif
